First pass and it mostly works.

--- a/README
+++ b/README
@@ -8,6 +8,6 @@ FIXME: write
 
 ## License
 
-Copyright (C) 2011 FIXME
+Copyright (C) 2011 Alex Robbins
 
-Distributed under the Eclipse Public License, the same as Clojure.
+Code can be freely reused. The images aren't mine to give away.
